# ecgFilter

./: CMakeLists.txt  README.md  main.cpp  parameters.h  plots.py
clBP/include/clbp/: Layer.h  Net.h  Neuron.h
clBP/lib/: Layer.cpp  Net.cpp  Neuron.cpp
